force-app/main/default/objects/Project__c/fields/Active_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Active_Project_Stage__c</fullName>
    <label>Active Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Initiating</fullName>
            </value>
            <value>
                <fullName>2. Planning</fullName>
            </value>
            <value>
                <fullName>3. Executing</fullName>
            </value>
            <value>
                <fullName>4. Monitoring &amp; Controlling</fullName>
            </value>
            <value>
                <fullName>5. Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>