force-app/main/default/objects/Project__c/fields/Annualized_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Cost_Impact__c</fullName>
    <description>The total annualized cost impact of this program.</description>
    <inlineHelpText>Enter negative number for cost savings and positive number for cost increase</inlineHelpText>
    <label>Annualized Cost Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>