force-app/main/default/objects/Project__c/fields/Cost_Impact_per_Bus__c.field-meta.xml
<CustomField>
    <fullName>Cost_Impact_per_Bus__c</fullName>
    <description>The average per bus cost impact expected from the program</description>
    <inlineHelpText>Enter a negative number for cost savings and a positive number for a cost increase</inlineHelpText>
    <label>Cost Impact per Bus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>