force-app/main/default/objects/Project__c/fields/Cost_ROI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Cost_ROI_Analysis__c</fullName>
    <label>Cost/ROI Analysis</label>
    <type>Url</type>
</CustomField>