force-app/main/default/objects/Project__c/fields/Details_of_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Cost_Impact__c</fullName>
    <label>Details of Cost Impact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>