force-app/main/default/objects/Project__c/fields/Estimated_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Hours__c</fullName>
    <label>Estimated Total Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>