force-app/main/default/objects/Project__c/fields/Impacted_Length__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Length__c</fullName>
    <label>Impacted Length</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>