force-app/main/default/objects/Project__c/fields/Key_Issues__c.field-meta.xml
<CustomField>
    <fullName>Key_Issues__c</fullName>
    <label>Key Issues &amp; Roadblocks</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>