force-app/main/default/objects/Project__c/fields/Link_to_Project_Folder__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Project_Folder__c</fullName>
    <label>Link to Project Folder</label>
    <type>Url</type>
</CustomField>