force-app/main/default/objects/Project__c/fields/Operating_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Operating_Committee_Approval__c</fullName>
    <label>Operating Committee Approval</label>
    <type>Date</type>
</CustomField>