force-app/main/default/objects/Project__c/fields/Pilot_Bus__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>