force-app/main/default/objects/Project__c/fields/Pilot_Bus_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Bus_Start_Date__c</fullName>
    <formula>Pilot_Bus__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot Bus Start Date</label>
    <type>Date</type>
</CustomField>