force-app/main/default/objects/Project__c/fields/Pilot_Customer__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Customer__c</fullName>
    <formula>Pilot_Bus__r.Internal_Name__c</formula>
    <label>Pilot Customer</label>
    <type>Text</type>
</CustomField>