force-app/main/default/objects/Project__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager/Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>