force-app/main/default/objects/Project__c/fields/Product_Planning_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Product_Planning_Committee_Approval__c</fullName>
    <label>Product Planning Committee Approval</label>
    <type>Date</type>
</CustomField>