force-app/main/default/objects/Project__c/fields/RFQ_Supplier_Proposal__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Supplier_Proposal__c</fullName>
    <label>RFQ/Supplier Proposal</label>
    <type>Url</type>
</CustomField>