force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-project Collection</fullName>
                <default>true</default>
                <label>Pre-project Collection</label>
            </value>
            <value>
                <fullName>Preliminary Investigation</fullName>
            </value>
            <value>
                <fullName>Project Selection</fullName>
            </value>
            <value>
                <fullName>Business Case Phase</fullName>
            </value>
            <value>
                <fullName>Business Case Evaluation</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>1. Concept</fullName>
                <isActive>false</isActive>
                <label>1. Concept</label>
            </value>
            <value>
                <fullName>2. Researching</fullName>
                <isActive>false</isActive>
                <label>2. Researching</label>
            </value>
            <value>
                <fullName>3. Charter Development</fullName>
                <isActive>false</isActive>
                <label>3. Charter Development</label>
            </value>
            <value>
                <fullName>4. Pending Approval</fullName>
                <isActive>false</isActive>
                <label>4. Pending Approval</label>
            </value>
            <value>
                <fullName>5. Active Project</fullName>
                <isActive>false</isActive>
                <label>5. Active Project</label>
            </value>
            <value>
                <fullName>6. In Production</fullName>
                <isActive>false</isActive>
                <label>6. In Production</label>
            </value>
            <value>
                <fullName>H. On Hold</fullName>
                <isActive>false</isActive>
                <label>H. On Hold</label>
            </value>
            <value>
                <fullName>X. Denied</fullName>
                <isActive>false</isActive>
                <label>X. Denied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>