force-app/main/default/objects/Project__c/fields/Supplier_Commercial_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Commercial_Agreements__c</fullName>
    <label>Supplier/Commercial Agreements</label>
    <type>Url</type>
</CustomField>