force-app/main/default/objects/Project__c/fields/Supplier_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Evaluation__c</fullName>
    <label>Supplier Evaluation</label>
    <type>Url</type>
</CustomField>