force-app/main/default/objects/Project__c/fields/Technical_Risk_Index__c.field-meta.xml
<CustomField>
    <fullName>Technical_Risk_Index__c</fullName>
    <label>Technical Risk Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR0</fullName>
            </value>
            <value>
                <fullName>TR1</fullName>
            </value>
            <value>
                <fullName>TR2</fullName>
            </value>
            <value>
                <fullName>TR3</fullName>
            </value>
            <value>
                <fullName>TR4</fullName>
            </value>
            <value>
                <fullName>TR5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>