force-app/main/default/objects/Project__c/fields/Validation_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Validation_Requirements__c</fullName>
    <label>Validation Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>