force-app/main/default/objects/Project__c/recordTypes/Process.recordType-meta.xml
<RecordType>
    <fullName>Process</fullName>
    <active>true</active>
    <description>Project to implement a process improvement (such as a new system implementation).</description>
    <label>Process</label>
</RecordType>