force-app/main/default/objects/Project__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Project to design/develop/release a product improvement, new product or cost savings opportunity.</description>
    <label>Product</label>
</RecordType>