force-app/main/default/objects/Project__c/listViews/Active_X_Projects.listView-meta.xml
<ListView>
    <fullName>Active_X_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Technical_Risk_Index__c</columns>
    <columns>Category__c</columns>
    <columns>Program_Manager__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Production_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>5. Active Project</value>
    </filters>
    <label>Active X Projects</label>
</ListView>