force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Description__c</columns>
    <columns>Product__c</columns>
    <columns>Technical_Risk_Index__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Technical_Lead__c</columns>
    <columns>Program_Manager__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Pilot_Bus_Start_Date__c</columns>
    <columns>Production_Availability__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>