force-app/main/default/objects/Project__c/listViews/Copy_of_All_Cost_Reduction_Project_07_19.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Cost_Reduction_Project_07_19</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Technical_Risk_Index__c</columns>
    <columns>Category__c</columns>
    <columns>Program_Manager__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Production_Availability__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CR</value>
    </filters>
    <label>Copy of All Cost Reduction Project 07_19</label>
</ListView>