force-app/main/default/objects/Project__c/listViews/Cost_Reduction_Projects.listView-meta.xml
<ListView>
    <fullName>Cost_Reduction_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Cost Reduction Projects</label>
</ListView>