force-app/main/default/objects/Project__c/listViews/Product_Projects.listView-meta.xml
<ListView>
    <fullName>Product_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Technical_Risk_Index__c</columns>
    <columns>Category__c</columns>
    <columns>Program_Manager__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Technical_Lead__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Production_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Product</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>1. Concept,2. Researching,3. Charter Development,4. Pending Approval,5. Active Project,H. On Hold</value>
    </filters>
    <label>Product Projects</label>
</ListView>